--- a/css/style.css
+++ b/css/style.css
@@ -5,26 +5,24 @@
     padding: 0;
     box-sizing: border-box;}
 
-header{
-    width: 100%;
-    height: 150px;
-    background-color: black;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    color: white;
-    font-family: 'Bebas Neue', cursive;
-}
-
-.header-titulo{
-    font-size: 50px;}
-
-
-
-.navbar{
-    display: flex;
-    list-style: none;
-    gap: 10px;}
+    header{
+        width: 100%;
+        height: 150px;
+        background-color: black;
+        color: white;
+        font-family: 'Bebas Neue', cursive;
+    }
+    
+    .header-titulo{
+        font-size: 50px;
+        display: flex;
+        justify-content: center;}
+    
+    .navbar{
+        display: flex;
+        list-style: none;
+        justify-content: center;
+        gap: 10px;}
 
 .section-principal{
     width: 100%;
