--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,18 @@
         gap: 10px;}
 
 .section-principal{
-    width: 100%;
-    height: 1600px;
-    background-image: url(../assets/img/inicio.jpg);}
+            display: grid;
+            grid-template-columns: 50% 50%;
+            grid-template-rows: 50% 50%;
+            width: 100%;
+            height: auto;
+            background-image: url(../assets/img/inicio.jpg);
+        }
+
+img {
+        max-width: 100%;
+        height: auto;}
+    
 
 h2{
     color: white;
