--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,134 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;}
-
-    header{
-        width: 100%;
-        height: 150px;
-        background-color: black;
-        color: white;
-        font-family: 'Bebas Neue', cursive;
-    }
-    
-    .header-titulo{
-        font-size: 50px;
-        display: flex;
-        justify-content: center;}
-    
-    .navbar{
-        display: flex;
-        list-style: none;
-        justify-content: center;
-        gap: 10px;}
-
-.section-principal{
-            display: grid;
-            grid-template-columns: 50% 50%;
-            grid-template-rows: 50% 50%;
-            width: 100%;
-            height: auto;
-            background-image: url(../assets/img/inicio.jpg);
-        }
-
-img {
-        max-width: 100%;
-        height: auto;}
-    
-
-h2{
-    color: white;
-    font-family: 'Bebas Neue', cursive;}
-
-.section-bebidas{
-    width: 100%;
-    height: 700px;
-    background-image: url(../assets/img/bebida.jpg);}
-
-.section-cocteles{
-    width: 100%;
-    height: 700px;
-    background-image: url(../assets/img/coctelfondo.jpg);
+    box-sizing: border-box;
 }
 
-.section-papas{
-    width:100%;
-    height: 700px;
-    background-image: url(../assets/img/papas.jpg);
+body {
+    background-color: black;
 }
 
-.section-pizzas{
+header {
     width: 100%;
-    height: 700px;
-    background-image: url(../assets/img/pizza.jpg);
-}
-.lista-precios{
+    height: 150px;
+    background-color: black;
     color: white;
     font-family: 'Bebas Neue', cursive;
 }
 
-.pie-de-pagina{
+.header-titulo {
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.navbar {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    gap: 10px;
+}
+
+.section-principal {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 100%;
+    height: auto;
+    background-image: url(../assets/img/inicio.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+h2 {
+    color: white;
+    font-family: 'Bebas Neue', cursive;
+}
+
+.section-bebidas {
+    width: 100%;
+    height: 700px;
+    background-image: url(../assets/img/bebida.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.section-cocteles {
+    width: 100%;
+    height: 700px;
+    background-image: url(../assets/img/coctelfondo.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.section-papas {
+    width: 100%;
+    height: 700px;
+    background-image: url(../assets/img/papas.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.section-pizzas {
+    width: 100%;
+    height: 700px;
+    background-image: url(../assets/img/pizza.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.lista-precios {
+    color: white;
+    font-family: 'Bebas Neue', cursive;
+}
+
+.pie-de-pagina {
     width: 100%;
     height: 150px;
     padding: 20px;
     background-color: black;
     color: white;
-    font-family: 'Bebas Neue', cursive;}
+    font-family: 'Bebas Neue', cursive;
+}
 
+/* Media */
+
+@media (max-width: 768px) {
+    .header-titulo {
+        font-size: 30px;
+    }
+
+    .section-principal {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto auto;
+    }
+}
+
+@media (max-width: 425px) {
+    .header-titulo {
+        font-size: 30px;
+    }
+
+    .section-principal {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto auto;
+    }
+}
+
+@media (max-width: 375px) {
+    .header-titulo {
+        font-size: 30px;
+    }
+
+    .section-principal {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto auto;
+    }
+}
