--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 150px;
     padding: 20px;
-    background-color: black;
-    color: white;
+    background-color: $color-secundario;
+    color: $color-principal;
     font-family: 'Bebas Neue', cursive;
 }
