--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,8 +1,9 @@
 header {
     width: 100%;
     height: 150px;
-    background-color: black;
-    color: white;
+    background-color: $color-secundario;
+    color: $color-principal;
+
     font-family: 'Bebas Neue', cursive;
 
     & .header-titulo {
