--- a/scss/layout/_main-papas.scss
+++ b/scss/layout/_main-papas.scss
@@ -1,7 +1,5 @@
 .section-papas {
-    width: 100%;
-    height: 700px;
+    @extend .section-bebidas;
     background-image: url(../assets/img/papas.jpg);
-    background-position: center;
-    background-size: cover;
+    
 }
