--- a/scss/layout/_main-pizzas.scss
+++ b/scss/layout/_main-pizzas.scss
@@ -1,7 +1,5 @@
 .section-pizzas {
-    width: 100%;
-    height: 700px;
+    @extend .section-bebidas;
     background-image: url(../assets/img/pizza.jpg);
-    background-position: center;
-    background-size: cover;
+    
 }
